--- a/contact.html
+++ b/contact.html
@@ -124,7 +124,7 @@
   <!-- HEADER -->
   <header>
     <div class="left-text">
-      <span class="hash">#</span><span class="yellow">StandWith</span><span class="blue">Ukraine</span>
+      <span class="yellow">UA</span><span class="blue">Nickname</span>
     </div>
     
   </header>
@@ -153,4 +153,5 @@
 
 </body>
 </html>
+
 
